add transfer functor construction

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -421,3 +421,20 @@ shorthand = {Don17},
 	note = {arXiv:alg-geom/9506012},
 	keywords = {Mathematics - Algebraic Geometry},
 }
+
+@article{donovan_window_2014,
+	title = {Window shifts, flop equivalences and {Grassmannian} twists},
+	shorthand = {DS14},
+	issn = {0010-437X, 1570-5846},
+	url = {http://arxiv.org/abs/1206.0219},
+	doi = {10.1112/S0010437X13007641},
+	language = {en},
+	number = {6},
+	journal = {Compositio Mathematica},
+	author = {Donovan, Will and Segal, Ed},
+	month = jun,
+	year = {2014},
+	note = {arXiv:1206.0219 [math]},
+	keywords = {14F05, 18E30 (Primary) 14M15 (Secondary), Mathematics - Algebraic Geometry, Mathematics - Representation Theory},
+	pages = {942--978},
+}
