--- a/cubicfourfold.tex
+++ b/cubicfourfold.tex
@@ -375,7 +375,7 @@ In the next section, we will see how the above correspondence allows us to defin
 
 We have seen that to every cubic fourfold containing a plane, we can associate some K3 surface by blowing up the plane and realizing $S$ as the variety of rulings on the fibers of the quadric fibration $\tilde{X}\rightarrow \P^2$. Given that the Kuznetsov component looks like the derived category of a K3 surface, it is natural to conjecture that these two are related. In this section, we review two approaches to proving the following: 
 \begin{proposition}{Kuznetsov}{Kuznetsov twisted K3}
-    There is an equvalence between the derived category of twisted sheaves on $S$ and the Kuznetsov component: $$\calD(S,\alpha)\simeq \calA_X$$
+    There is an equivalence between the derived category of twisted sheaves on $S$ and the Kuznetsov component: $$\calD(S,\alpha)\simeq \calA_X$$
 \end{proposition}
 
 \begin{proof}[Proof 1]
@@ -390,7 +390,7 @@ We have seen that to every cubic fourfold containing a plane, we can associate s
 \begin{proof}[Proof 2]
 A second approach is found in \cite[\S7]{huybrechts_geometry_2023} by using a Fourier-Mukai kernel. 
 
-\textbf{Step 1}: We first choose a kernal and define a functor witnessing the desired equivalence.
+\textbf{Step 1}: We first choose a kernel and define a functor witnessing the desired equivalence.
 
 The universal line $\tscrP\subset X \times \tscrF$ has an ideal sheaf $\calI$ and we consider the Fourier-Mukai transform associated to the correspondence: 
 \[\begin{tikzcd}
