add some bib stuff

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -448,3 +448,15 @@ shorthand = {Don17},
 	keywords = {14F05, 18E30 (Primary) 14M15 (Secondary), Mathematics - Algebraic Geometry, Mathematics - Representation Theory},
 	pages = {942--978},
 }
+
+@misc{ballard_mori_2013,
+	title = {The {Mori} {Program} and {Non}-{Fano} {Toric} {Homological} {Mirror} {Symmetry}},
+	shorthand = {BDFKK13},
+	url = {http://arxiv.org/abs/1302.0803},
+	publisher = {arXiv},
+	author = {Ballard, Matthew and Diemer, Colin and Favero, David and Katzarkov, Ludmil and Kerr, Gabriel},
+	month = feb,
+	year = {2013},
+	note = {arXiv:1302.0803 [math]},
+	keywords = {Mathematics - Algebraic Geometry, Mathematics - Symplectic Geometry}
+}
